--- a/vendor.conf
+++ b/vendor.conf
@@ -52,7 +52,7 @@ google.golang.org/grpc                              39e8a7b072a67ca2a75f57fa2e0d
 gotest.tools                                        1083505acf35a0bd8a696b26837e1fb3187a7a83 # v2.3.0
 
 # cri dependencies
-github.com/containerd/cri                           c9d45e65263e26f7e7f0ac8fdca0d510622f12cb # master
+github.com/containerd/cri                           4727a03a277c6ca0d588b6f8c5bd19aa444d681f https://github.com/ktock/cri # stargz
 github.com/containerd/go-cni                        0d360c50b10b350b6bb23863fd4dfb1c232b01c9
 github.com/containernetworking/cni                  4cfb7b568922a3c79a23e438dc52fe537fc9687e # v0.7.1
 github.com/containernetworking/plugins              9f96827c7cabb03f21d86326000c00f61e181f6a # v0.7.6
@@ -63,6 +63,7 @@ github.com/docker/spdystream                        449fdfce4d962303d702fec724ef
 github.com/emicklei/go-restful                      b993709ae1a4f6dd19cfa475232614441b11c9d5 # v2.9.5
 github.com/google/gofuzz                            f140a6486e521aad38f5917de355cbf147cc0496 # v1.0.0
 github.com/json-iterator/go                         27518f6661eba504be5a7a9a9f6d9460d892ade3 # v1.1.7
+github.com/ktock/remote-snapshotter                 aeb32aacc32385ce773c05035d4b89911b5fc2ec
 github.com/modern-go/concurrent                     bacd9c7ef1dd9b15be4a9909b8ac7a4e313eec94 # 1.0.3
 github.com/modern-go/reflect2                       4b7aa43c6742a2c18fdef89dd197aaae7dac7ccd # 1.0.1
 github.com/opencontainers/selinux                   3a1f366feb7aecbf7a0e71ac4cea88b31597de9e # v1.2.2
